# semester-work-r-tree

./: CMakeLists.txt  MemoryTest.cpp  README.md  RTree.cpp  RTree.h  main.cpp
benchmark/: CMakeLists.txt  benchmark_delete.cpp  benchmark_insert.cpp  benchmark_search.cpp
benchmark/result/: benchmark_delete_result.csv  benchmark_insert_result.csv  benchmark_insert_result.txt  benchmark_search_result.csv
dataset/: CMakeLists.txt  generate_csv_dataset.py  generate_csv_dataset_all.py
dataset/data/insert/01/: 100.csv  1000.csv  10000.csv  100000.csv  25000.csv  250000.csv  500.csv  5000.csv  50000.csv  500000.csv
dataset/data/insert/02/: 100.csv  1000.csv  10000.csv  100000.csv  25000.csv  250000.csv  500.csv  5000.csv  50000.csv  500000.csv
dataset/data/insert/03/: 100.csv  1000.csv  10000.csv  100000.csv  25000.csv  250000.csv  500.csv  5000.csv  50000.csv  500000.csv
dataset/data/insert/04/: 100.csv  1000.csv  10000.csv  100000.csv  25000.csv  250000.csv  500.csv  5000.csv  50000.csv  500000.csv
dataset/data/insert/05/: 100.csv  1000.csv  10000.csv  100000.csv  25000.csv  250000.csv  500.csv  5000.csv  50000.csv  500000.csv
dataset/data/insert/06/: 100.csv  1000.csv  10000.csv  100000.csv  25000.csv  250000.csv  500.csv  5000.csv  50000.csv  500000.csv
dataset/data/insert/07/: 100.csv  1000.csv  10000.csv  100000.csv  25000.csv  250000.csv  500.csv  5000.csv  50000.csv  500000.csv
dataset/data/insert/08/: 100.csv  1000.csv  10000.csv  100000.csv  25000.csv  250000.csv  500.csv  5000.csv  50000.csv  500000.csv
include/: RTree.h
src/: RTree.cpp
(+20 files in other folders)
